--- a/app/src/main/res/layout/activity_question_detail.xml
+++ b/app/src/main/res/layout/activity_question_detail.xml
@@ -24,7 +24,7 @@
             android:id="@+id/detailTextview"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/black"
+            android:textColor="@color/purple_500"
             android:textSize="22sp"
             android:gravity="center"
             android:textStyle="bold"
